eKYC: support for expected values